ZeroF, Count down UI support Fixed Finger unit placed initial dict

--- a/Assets/UI/Uss/GameWinLoseScreen.uss
+++ b/Assets/UI/Uss/GameWinLoseScreen.uss
@@ -53,6 +53,8 @@
     height: 100%;
     -unity-font-definition: initial;
     -unity-font: url('project://database/Assets/TextMesh%20Pro/Examples%20&%20Extras/Fonts/Bangers.ttf?fileID=12800000&guid=5dd49b3eacc540408c98eee0de38e0f1&type=3#Bangers');
+    -unity-text-outline-width: 3px;
+    -unity-text-outline-color: rgb(0, 0, 0);
 }
 
 .game-win-lose__button {
