--- a/Assets/UI/Uxml/InstructorUXML/InstructorPanel.uxml
+++ b/Assets/UI/Uxml/InstructorUXML/InstructorPanel.uxml
@@ -84,13 +84,13 @@
                         </ui:VisualElement>
                     </ui:VisualElement>
                     <ui:VisualElement name="session_behaviours" style="flex-grow: 0; flex-direction: row; flex-shrink: 0; width: 1263px; align-self: center; top: 45px; justify-content: space-around; align-items: center; display: flex; margin-top: 0;">
-                        <ui:VisualElement name="Individuation" style="flex-grow: initial; flex-direction: row; width: 256px; flex-shrink: initial; align-items: center;">
-                            <ui:Label text="Individuation" name="individuation_label" class="input_fields__label ingame_configs__label" style="width: 231px; font-size: 40px;" />
-                            <ui:Toggle name="Individuation_toggle" class="instrucot_toggle" style="margin-left: 31px;" />
+                        <ui:VisualElement name="isolated_control" style="flex-grow: initial; flex-direction: row; width: 256px; flex-shrink: initial; align-items: center;">
+                            <ui:Label text="Isolated Control" name="individuation_label" class="input_fields__label ingame_configs__label" style="width: 231px; font-size: 29px; -unity-font-style: bold;" />
+                            <ui:Toggle name="isolated_control_toggle" class="instrucot_toggle" style="margin-left: 31px;" />
                         </ui:VisualElement>
                         <ui:VisualElement name="multi_fingers_checkbox" style="flex-grow: initial; flex-direction: row; width: 256px; flex-shrink: initial; align-items: center;">
                             <ui:Label text="Multiple Fingers" name="multi_fingers_label" class="input_fields__label ingame_configs__label" style="width: 231px; font-size: 40px; left: -26px;" />
-                            <ui:Toggle name="auto_start_toggle" class="instrucot_toggle" style="margin-left: 31px;" />
+                            <ui:Toggle name="multi_finger_toggle" class="instrucot_toggle" style="margin-left: 31px;" />
                         </ui:VisualElement>
                         <ui:VisualElement name="VisualElement" style="flex-grow: 1; display: none;" />
                         <ui:VisualElement name="zero_f_checkbox" style="flex-grow: initial; flex-direction: row; width: 214px; flex-shrink: initial; align-items: center; margin-left: 0;">
